kubernetes/apps/tools/ytmp3/config/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ytmp3-ingress
  namespace: tools
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ytmp3.${EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: ytmp3
          port: 8081
          namespace: tools
  tls:
    secretName: ytmp3-tls
